--- a/twitter-api/src/main/resources/static/monitor.html
+++ b/twitter-api/src/main/resources/static/monitor.html
@@ -61,6 +61,9 @@
                 <div class="col-md-auto">
                     <button class="btn btn-dark" type="button" id="button-addon3">Refresh Feed</button>
                 </div>
+                <div class="col-md-auto">
+                    <button class="btn btn-warning" type="button" id="button-addon4">Sentiment Analysis</button>
+                </div>
             </div>
             <div class="row g-3 mt-2 col-md-12" id="monitor">
                 <div class="col-md-auto" id="monitorText">
@@ -74,53 +77,27 @@
 
             <div class="row g-3 mt-2 col-md-12">
 
-                <div class="col-xl-3 col-md-6 mb-4">
-                    <div class="card text-white bg-success">
-                        <div class="card-body">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col mr-2">
-                                    <div class="text-xs font-weight-bold text-uppercase mb-1">Total</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="total"></div>
-                                </div>
-                                <div class="col-auto">
-                                    <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                                </div>
-                            </div>
-                        </div>
+                <div id="span"><h6>Tweets count <span class="badge bg-primary" id="total"></span></h6></div>
+
+                <div class="row g-3 mt-2 col-md-12" id="loading">
+                    <div class="col-md-auto" id="loadingText">Loading Sentiment Data, Please wait..</div>
+                    <div class="col-md-auto">
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                          </div>
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-md-6 mb-4">
-                    <div class="card text-dark bg-info">
-                        <div class="card-body">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col mr-2">
-                                    <div class="text-xs font-weight-bold text-uppercase mb-1">Positive</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="positive"></div>
-                                </div>
-                                <div class="col-auto">
-                                    <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 col-md-6 mb-4">
-                    <div class="card text-white bg-danger">
-                        <div class="card-body">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col mr-2">
-                                    <div class="text-xs font-weight-bold text-uppercase mb-1">Negetive</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800" id="negetive"></div>
-                                </div>
-                                <div class="col-auto">
-                                    <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <table class="table table-secondary table-bordered mt-4 col-md-12" id="sentimentTable">
+                    <thead>
+                        <tr class="table-info">
+                            <th>#</th>
+                            <th>Tweet</th>
+                            <th>Sentiment</th>
+                        </tr>
+                    </thead>
+                    <tbody> </tbody>
+                </table>
         </div>
 
 
